[package]
name = "pure_rng"
authors = ["Jonathan Davies <jonnie@jcd.pub>"]
description = "rand-compatible RNG library for generating repeatable, controlled random values, designed primarily for use in games."
repository = "https://github.com/JonnieCache/pure_rng"
version = "0.8.0"
edition = "2021"
license = "MIT"
keywords = ["rng", "random", "hasher", "deterministic", "gamedev"]
categories = ["game-development", "algorithms"]

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_core = { version = "0.6.4", default-features = false }
rapidhash = { version = "1.1.0", optional = true, features = ["rng"] }
serde = { version = "1.0.210", optional = true, features = ["serde_derive"] }

[features]
default = [ "rapidhash" ]

[dev-dependencies]
rand_distr = "0.4.3"
